# my-flask-blog-app

./: .env  .gitignore  app.py  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  wsgi.py
bloggr/: __init__.py  auth.py  blog.py  models.py
bloggr/static/: style.css
bloggr/static/css/: main.css  output.css
bloggr/static/src/: input.css
bloggr/templates/: home.html
bloggr/templates/auth/: login.html  register.html
bloggr/templates/blog/: edit.html  index.html  new.html
instance/: config.py
migrations/versions/: 9f6fc534b687_initial_migration.py
templates/: edit.html  index.html  new.html
tests/: conftest.py  test_auth.py  test_blog.py  test_factory.py  test_models.py
