[project]
name = "bloggr"
version = "1.0.0"
description = "A production-level flask blog web application."
authors = [
    {name = "Hanny Abubakar", email = "abubakarhannyom@gmail.com"}
]
dependencies = [
    "alembic==1.17.2",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "Flask==3.1.2",
    "Flask-Bcrypt==1.0.1",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.2.4",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "Mako==1.3.10",
    "MarkupSafe==3.0.3",
    "packaging==25.0",
    "psycopg==3.3.2",
    "psycopg-binary==3.3.2",
    "psycopg2-binary==2.9.11",
    "Pygments==2.19.2",
    "python-dotenv==1.2.1",
    "SQLAlchemy==2.0.44",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "waitress==3.0.2",
    "Werkzeug==3.1.4",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "coverage==7.12.0",
    "pytest==9.0.1",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bloggr"]
